@@ -42,8 +42,8 @@ class SplineDialog(QtWidgets.QDialog, SplineDialogUI):
         extent = self.extent.value()
 
         for i in range(self.knots.rowCount()):
-            dz.append(float(self.knots.takeItem(i, 0).text()))
-            vs.append(float(self.knots.takeItem(i, 1).text()))
+            dz.append(float(self.knots.item(i, 0).text()))
+            vs.append(float(self.knots.item(i, 1).text()))
 
         return Spline(extent, vs, dz, name='spline',
                       microslab_max_thickness=1.0)
